--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,11 @@
 .title{color: #3375de; font-size: 55px; font-family: "Source Sans Pro Bold", sans-serif; font-weight: 700;
 margin: 35px 0;}
 .subtitle{color: #424549; font-size: 28px; font-family: "Source Sans Pro Bold", sans-serif; font-weight: 700; margin: 35px 0;}
-.desc{color: #424549; font-size: 19px; font-family: "Source Sans Pro", sans-serif; font-weight: 400;}
-
+.desc{color: #424549; font-size: 19px; font-family: "Source Sans Pro", sans-serif; font-weight: 400;
+line-height: 26px;}
+.linemap{color: #BEBEBE; font-size: 20px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700;}
+a.linemap{text-decoration: none;}
+.text_menu{margin-top: 40px;}
 
 
 /* Extra small devices (phones, 600px and down) */
@@ -39,7 +42,7 @@ margin: 35px 0;}
     .gnb_menu{position: absolute; right: 0; top: 43px;}
     .menu{
         color: #424549; font-size: 20px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700; 
-        letter-spacing: 0.05rem;
+        letter-spacing: 0.05rem; 
         position: relative; top: -14px; left: 6px;
         padding: 10px; margin: 0 12px;}
     .share_btn{color: #3375DE; border: 2px solid #3375DE; }
@@ -49,9 +52,33 @@ margin: 35px 0;}
 
 
     /* Contents */
-    .wrap{width: 100%; background-color: #f5f4f4;}
-    .contents_wrap{width: 1455px; background-color: #ffffff; margin: 0 auto;}
+    .wrap{width: 100%; background-color: #f5f4f4; }
+    .contents_wrap{width: 1455px; background-color: #ffffff; margin: 0 auto; padding-bottom: 100px; }
     .text_wrap{width: 1080px; margin: 0 auto;}
+    .graph_img{margin: 20px auto;}
+    .committee_list{margin: 20px auto;}
+
+    .committee_list, .committee_list th, .committee_list td {
+        cell-paddi
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    .committee_list th{background-color: #3375DE; color: #ffffff;}
+
+
+    /* Footer */
+    .footer{width: 100%; height: 100px; background-color: #424549;}
+    .footer_wrap{width: 1455px; position: relative; margin: auto;}
+    .footer_font{color: #ffffff; font-size: 17px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700; }
+    
+    .sponsors{position: absolute; left: 70px; top: 45px; }
+    .share_via {position: absolute; right: 240px; top: 45px; }
+    .sns_share{position: absolute; right: 80px; top: 38px; }
+
+    .sns_icon{display: inline; width: 40px; height: 40px; margin: 0 5px;}
+    
+
+
 
     
 
