--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,21 @@ a.linemap{text-decoration: none;}
     .text_wrap{width: 1080px; margin: 0 auto;}
     .graph_img{margin: 20px auto;}
 
-    .committee_list{width: 1080px; margin: 30px auto 80px; text-align: center; }
-    .committee_list {border: 1px solid #B0B0BB;}
-    .committee_list th{background-color: #3375DE; color: #ffffff; height: 63px; vertical-align: middle;}
-    .committee_list td{height: 20px; background-color: orange;}
+    .rect_li{margin: 30px 0 30px 30px;}
+    .rect{background-color: #3375DE; width: 13px; height: 13px; margin-top: 7px;
+    display: table; float: left;}
+    .rect_desc{display: block; margin: 0 0 0 25px;}
+
+    .committee_li{width: 1080px; margin: 30px auto 80px; text-align: center; }
+    .committee_li {border: 1px solid #B0B0BB;}
+    .committee_li th{background-color: #3375DE; color: #ffffff; height: 63px; vertical-align: middle;}
+    .committee_li td{height: 40px; vertical-align: middle;}
+    .committee_li td:nth-child(1){width: 5%;}
+    .committee_li td:nth-child(2){width: 15%;}
+    .committee_li td:nth-child(3){width: 20%;}
+    .committee_li td:nth-child(4){width: 20%;}
+    .committee_li td:nth-child(5), .committee_li td:nth-child(6), .committee_li td:nth-child(7), .committee_li td:nth-child(8){width: 10%;}
+
 
     .sponsor_logo{width: 300px; height: 180px;
         position: relative; display: inline-block;}
