--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ line-height: 26px;}
 @media only screen and (min-width: 1200px) {
 
     /* Navigation */
-    .navbar{width: 100%; height: 100px; background-color: #ffffff;}
+    .navbar{width: 100%; height: 100px; background-color: #ffffff; position: fixed;
+    box-shadow: 0px -1px 8px 2px #a7a7a7;}
 
     .gnb{position: relative; width: 1455px; margin: 0 auto;}
     .gnb_logo, .logo_desc, .gnb_menu, .menu{display: inline-block;}
@@ -49,16 +50,20 @@ line-height: 26px;}
         color: #424549; font-size: 20px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700; 
         letter-spacing: 0.05rem; 
         position: relative; top: -14px; left: 6px;
-        padding: 10px; margin: 0 12px;}
-    .share_btn{color: #3375DE; border: 2px solid #3375DE; }
-    .lang_btn{display: inline-block;}
-    .menu img{width: 32px; height: 32px;}
+        padding: 10px; margin: 0 10px;}
+    .share_btn{color: #3375DE; border: 2px solid #3375DE; width: 70px; border-radius: 25px; 
+    text-align: center;}
+    .lang_btn{display: inline-block; margin-left: 20px;
+        position: relative; top: -4px;}
+
     .gnb_menu a{text-decoration: none;}
 
 
     /* Contents */
-    .wrap{width: 100%; background-color: #f5f4f4; }
-    .contents_wrap{width: 1455px; background-color: #ffffff; margin: 0 auto; padding-bottom: 100px; }
+    .wrap{width: 100%; background-color: #f5f4f4;}
+    .contents_wrap{width: 1455px; background-color: #ffffff; margin: 0 auto; 
+        padding-bottom: 100px; padding-top: 100px;
+        box-shadow: 0px -1px 8px 2px #a7a7a7;}
     .text_wrap{width: 1080px; margin: 0 auto;}
     .graph_img{margin: 20px auto;}
 
