--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,9 @@ border: 2px solid transparent;
   padding: 1rem 0rem;
   background-color: transparent;
 }
+ol.breadcrumb{margin-top: 20px;}
 .breadcrumb-item a {
-  color: #BEBEBE; font-size: 20px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700; margin-top: 40px;
+  color: #BEBEBE; font-size: 20px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:700; 
   text-decoration: none;
 }
 .breadcrumb-item+.breadcrumb-item::before {
@@ -73,8 +74,8 @@ border: 2px solid transparent;
 
 
 /* Contents */
-h1.display-4{color: #3375DE; font-size: 55px; font-family: "Source Sans Pro Bold", sans-serif; font-weight: 700;
-margin: 35px 0;}
+h1.display-4{color: #3375DE; font-size: 50px; font-family: "Source Sans Pro Bold", sans-serif; font-weight: 700;
+margin: 17px 0 25px 0;}
 .lead, .table, .lof-list, .ta-list{color: #424549; font-size: 19px; font-family: "Source Sans Pro", sans-serif; font-weight: 400; line-height: 26px;}
 .lead a, .table a, .lof-list a, .ta-list a{color: #3375DE;}
 .subtitle{color: #424549; font-size: 28px; font-family: "Source Sans Pro Bold", sans-serif; font-weight: 700; margin: 35px 0;}
@@ -132,12 +133,14 @@ ol.ta-list li:before {
 
 /* table */
 .table .thead-dark th {
-  background-color: #3375de;
+  background-color: #3375DE;
   border-color: #3375de;
 }
+
 a.no-deco {
   text-decoration: none !important;
 }
+table .tb_sns img{width: 28px; height: 28px;}
 
 /* Sponsors */
 .sponsor_logo img{width: 250px; height: auto;}
