--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ body {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
 
+.header{
+    height: 200px; 
+    background-image: url("../images/header_mobile.png");
+    background-position: center;
+    background-color:#3375ed;
+    background-repeat: no-repeat; 
+  }
+
+
 /* Navbar */
 .navbar {
   box-shadow: 0px -1px 8px 2px #a7a7a7;
@@ -59,7 +68,7 @@ border: 2px solid transparent;
 /* Breadcrumbs */
 
 .rect{ width: 4px; height: 34px; background-color: #B0B0BB;
-  position: absolute; top: 550px;
+  position: absolute; top: 320px;
 }
 .breadcrumb {
   padding: 1rem 0rem;
@@ -209,6 +218,13 @@ table .tb_sns img{width: 28px; height: 28px;}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+
+  .header{
+    width: 100%; height: 450px; 
+    background-image: url("../images/header.png");
+    background-position: center;
+    background-color: #3a78da;
+  }
 
   /* Layout */
   .container {max-width: 1460px;}
