--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
 /* Navbar */
 .navbar {
   box-shadow: 0px -1px 8px 2px #a7a7a7;
+  z-index: 100;
+}
+.navbar-toggler{
+  border: none; font-size: 1.7em;
 }
 .logo-text{
   font-size: 12px; margin-left: 10px;
